@@ -3,6 +3,8 @@
 	* Fixed bug #1731542 by forcing the current frame to be passed for the
 	  get_3d_xtiles get_3d_ytiles (thus, ensuring proper bounding boxes).
 	* Fixed bug #1731543.
+	* Fixed bug in ES method of saving differential VGA patches and improved
+	  recognition of files from patch dir.
 
 2007-06-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
 	* objs/virtstone.h: Changed 'default' value for virtue stone map to be map 0.
